--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>CSS sticky</title>
 </head>
 <body>
@@ -50,6 +51,5 @@
             Go top
         </button>
     </footer>
-<script src="./js/script.js"></script>
 </body>
 </html>
